# agentcodex

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  marketplace.json  pyproject.toml  setup.py
.agentcodex/: data-agents-extension.json  ecc-extension.json  ecc-fidelity.json  model-routing.json  project-standard.json  workflow-fidelity.json
.codex/: config.toml
.githooks/: post-commit  pre-commit
docs/: AGENT-ROUTER.md  COMMANDS.md  CONTEXT-HISTORY.md  CREDITS.md  DATA-AGENTS-EXTENSION.md  DATA-AGENTS-PORT-INVENTORY.md  DECISIONS.md  ECC-EXTENSION.md  IMPORTED-AGENT-INVENTORY.md  INDEX-STRATEGY.md  INTEGRATION-PLAN.md  JUDGE.md  KB-CONTRACTS.md  LOCAL-OBSERVABILITY.md  MAPPING-AGENTSPEC-TO-CODEX.md  PLUGIN-DISTRIBUTION.md  POLICIES.md  PORTING-ROADMAP.md  PRIVACY-SHORT.md  PRIVACY.md  ROLE-COVERAGE.md  ROUTING-GUIDE.md  SESSION-HANDOFF.md  SOURCE-SYNC.md  STATUS.md  SUMMARIES.md  TERMS-SHORT.md  TERMS.md  UPDATE-AUTOMATION.md  UPSTREAM-CATALOG.md  UPSTREAM-IMPORTS.md
scripts/: agentcodex.py  audit_summary.py  bootstrap_project.py  build_plugin_runtime.py  check_bootstrapped_project.py  control_plane_check.py  current_status.py  daily_tasks.py  extract_log_knowledge.py  generate_data_agents_extension_registry.py  generate_ecc_extension_registry.py  generate_import_catalog.py  generate_roles_manifest.py  generate_routing_manifest.py  generate_status_doc.py  import_upstreams.py  install_codex_command_shim.py  install_codex_plugin.py  install_local_automation.py  judge.py  kb_domains.py  maturity5_check.py  memory_approve_candidates.py  memory_backend.py  (+35 more)
(+457 files in other folders)
