[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcodex"
version = "0.1.0"
description = "Codex-first workflow and project bootstrap toolkit inspired by AgentSpec and ECC"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "AgentCodex" }
]
keywords = ["codex", "agents", "workflow", "sdd", "bootstrap", "data-engineering"]

[project.scripts]
agentcodex = "agentcodex_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
